add slide id into url param, change menu links to use url params

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
 
     <nav id="main-nav">
         <div class="container">
-            <span class="main-nav-link" id="jump-missions">Missions</span>
+            <a href="/?slide=1" class="main-nav-link" id="jump-missions">Missions</a>
             <img class="main-nav-separator" src="/img/x.svg" alt="separator">
-            <span class="main-nav-link" id="jump-research">Research</span>
+            <a href="/?slide=2" class="main-nav-link" id="jump-research">Research</a>
             <img class="main-nav-separator" src="/img/x.svg" alt="separator">
-            <span class="main-nav-link" id="jump-education">Education</span>
+            <a href="/?slide=3" class="main-nav-link" id="jump-education">Education</a>
             <img class="main-nav-separator" src="/img/x.svg" alt="separator">
-            <span class="main-nav-link" id="jump-contact">Contact</span>
+            <a href="/?slide=4" class="main-nav-link" id="jump-contact">Contact</a>
         </div>
     </nav>
 
