hide header on the first slide

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="scroll-lock">
     <!-- Torn from normal html -->
-    <header>
+    <header id="main-header">
         <a href="/"><img src="/img/premedix-academy-logo.svg" alt=""></a>
         <img id="hamburger" src="/img/hamburger.svg" alt="hamburger">
     </header>
